fix: Change modal width on mobile devices (#95)

--- a/src/components/molecules/Modal/Modal.scss
+++ b/src/components/molecules/Modal/Modal.scss
@@ -1,4 +1,5 @@
 @import '../../../styles/variables.scss';
+@import '../../../styles/mixins.scss';
 
 .modal {
     &__background {
@@ -26,5 +27,13 @@
     &__button {
         float: right;
         margin: 5px;
+    }
+}
+
+@include for-phone-and-tablet {
+    .modal {
+        &__wrapper {
+            width: 80%;
+        }
     }
 }
